external-crates/move/crates/move-compiler/tests/move_check/parser/friend_decl_inside_function.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/friend_decl_inside_function.move:6:9
  │
6 │         friend 0x42::A;
  │         ^^^^^^
  │         │
  │         Unexpected 'friend'
  │         Expected an expression term

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/friend_decl_inside_function.move:6:16
  │
6 │         friend 0x42::A;
  │                ^^^^
  │                │
  │                Unexpected '0x42'
  │                Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

